deploy/k8s/overlays/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devboard-ingress
  namespace: devboard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:627073650332:certificate/ccc54f68-f0d5-4a68-aecb-32bfe354a903
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  rules:
    - host: www.smtdevboard.com
      http:
        paths:
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: devboard-event-service
                port:
                  number: 8081
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: devboard-event-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devboard-backend
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devboard-frontend
                port:
                  number: 80
